2005-07-04 21:18 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: In -testInterface corrected a problem with testing
	interface when menu item is connected to NSOwner.

2005-07-04 20:44 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Cleaned up some duplicate connections
	* GormCore/GormFilePrefsManager.m: Updated version to 0.10.2
	* GormInfo.plist: Updated version to 0.10.2
	* Version: Updated version to 0.10.2

2005-07-04 17:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* English.lproj/Gorm.gorm: Added Layout and Alignment menus.
	* GormCore/GormDocument.[hm]: Added alignSelectedObjects: and 
	arrangeSelectedObjects: methods.
	* GormCore/GormProtocol.h: Added alignSelectedObjects: and 
	arrangeSelectedObjects: methods declarations
	* GormCore/NSView+GormExtensions.[hm]: Added moveViewToFront: and
	moveViewToBack: methods.
	* Gorm.m: Added alignSelectedObjects: and 
	arrangeSelectedObjects: methods.

2005-07-03 12:52 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/4Data/main.m: Minor fix in 
	depositViewResourceFromPasteboard: to prevent crash.

2005-07-03 12:26 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormBoxEditor.m: Minor cleanup.
	* GormCore/GormControlEditor.m: Removed unecessary code to 
	handle formatter, since it is now handled generically via the
	dragging delegate code.
	* GormCore/GormViewEditor.m: Added code in performDragOperation:
	and other dragging methods to correctly use the dragging delegate
	code.
	* GormCore/NSView+GormExtensions.m: Added implementation
	of delegate registration methods to NSView here.
	* GormLib/IBApplicationAdditions.h: Added declaration
	for documentForObject: to the IBDocuments protocol.
	* GormLib/IBPalette.h: Changed "document" ivar to paletteDocument.
	* GormLib/IBPalette.m: Changed "document" ivar to paletteDocument.
	* Gorm.m: Added implementation of documentForObject:
	* Palettes/2Controls/main.m: Added methods for 